--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
@@ -26,7 +26,7 @@
     <div id="content-wrapper">
         {% block nav %}
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-            
+
             <div {%block nav_container_class%}class="container"{%end%}>
                 <a class="navbar-brand" href="/">
                     <span class="title">ATXServer2</span></a>
@@ -45,7 +45,7 @@
                     <div class="navbar-nav navbar-right ml-auto">
                         {% if current_user.admin %}
                         <div class="nav-item">
-                            <a class="nav-link" href="/admin"><i class="fas fa-users-cog"></i> 后台管理</a>
+                            <a class="nav-link" href="/admin"><i class="fas fa-users-cog"></i> Backstage management</a>
                         </div>
                         {% end %}
                         <div class="nav-item dropdown">
@@ -74,16 +74,16 @@
                 data: {
                     links: [{
                         path: "/devices",
-                        name: "设备列表",
+                        name: "Device List",
                         icon: ["fas", "fa-th-list"]
                         // icon: ["fab", "fa-android"]
                         // }, {
                         //     path: "/apples",
-                        //     name: "苹果设备",
+                        //     name: "Apple device",
                         //     icon: ["fab", "fa-apple"]
                     }, {
                         path: "/uploads",
-                        name: "文件上传",
+                        name: "File Upload",
                         icon: ["fas fa-cloud-upload-alt"]
                     }],
                     activePath: location.pathname,
