--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 
             <div {%block nav_container_class%}class="container"{%end%}>
                 <a class="navbar-brand" href="/">
-                    <span class="title">ATXServer2</span></a>
+                    <span class="title">Neun System 1</span></a>
                 </a>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <div class="navbar-nav">
@@ -54,7 +54,7 @@
                                 {{current_user.username}}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="/user">用户信息</a>
+                                <a class="dropdown-item" href="/user">User Info</a>
                                 <a class="dropdown-item" href="/logout">Logout</a>
                             </div>
                         </div>
